--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "dotenv": "^16.4.7",
     "env": "^0.0.2",
+    "js-yaml": "^4.1.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.14.0",
@@ -53,6 +53,7 @@
     "@types/express": "^5.0.0",
     "@types/hapi__joi": "^17.1.15",
     "@types/jest": "^29.5.14",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
